This is a record of changes to SerialEM since it was first publicly released.

* marks changes or enhancements noticeable to the user, or items of particular
significance, for the stable release version
============================================================================
8/23/21: Changed multi-hole combiner to use image positions for a montage
whenever possible (i.e., if points were drawn on a loaded map), which fixes
problem of bad center positions when there are big piece offsets.

8/23/21: Fixed hole finder assigning points to wrong montage piece and some
other potential problems (In 3.8).

8/19/21: Added camera properties for Falcon frame path and reference directory
so that it will work with multiple Falcons.

8/19/21: Fixed problems with HDF saving, and with reopening HDF montages.

8/19/21: Added checks for illegal characters in entered names for frame files
and folders.

8/18/21: Prevented problem with mismatched sizes in shift calibrations when
using trial area (In 3.8).

8/17/21: Put stage coordinates of marker point in status bar when Navigator
is open.

8/17/21: Prevented some inappropriate operations when the stage is busy.

8/17/21: Put SAVING IMAGE in status bar in case it takes a long time.

8/17/21: Took the fill value used for missing montage pieces from a piece near
center instead of the first piece when possible so it would be gray not black.

8/17/21: Prevented DM from crashing and got proper error return when the
output file for frame saving cannot be opened (In 3.8).

8/17/21: Prevented program crashes and message boxes during batch acquisition
when the file to be reordered for bidirectional or dose-symmetric series
cannot be renamed (i.e., when open elsewhere) (In 3.8).

8/4/21: Expanded the set of tasks that Navigator Acquire at Items can run,
provided flexibility in where and when they run, added multiple Records as
another primary acquisition action, revamped the Acquire at Items dialog and